methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:31: error: identifier expected but '{' found.
def ligne({
          ^PictureMono2:54: error: ':' expected but '}' found.
}
^